Bug #5855
fix __RESTRICT_KYWD to support the correct keyword with c++
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
2015-04-17
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
(as indicated https://www.illumos.org/issues/2941#note-2)
gcc bootstraps fail define to define __restrict for g++ because
of it failing the fixincludes test after 2941.
My proposed https://gcc.gnu.org/bugzilla/show_bug.cgi?id=61649 has more
or less fallen on deaf ears.
It is cleaner to fix the gate.
I've tested this with both gcc/g++ and studio cc/CC with both C99 mode and not
and all seems hunky dory.
I've bootstrapped gcc (now without my patch) and it swallows the good version just fine
as expected.
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 10a6478a64c986fe8b918521951c9068ed5588fe
commit 10a6478a64c986fe8b918521951c9068ed5588fe Author: Richard PALO <richard@NetBSD.org> Date: 2015-10-06T18:06:44.000Z 5855 fix __RESTRICT_KYWD to support the correct keyword with c++ Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Reviewed by: Josef Sipek <jeffpc@josefsipek.net> Approved by: Dan McDonald <danmcd@omniti.com>