5855 fix  __RESTRICT_KYWD to support the correct keyword with c++ Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Reviewed by: Josef Sipek <jeffpc@josefsipek.net> Approved by: Dan McDonald <danmcd@omniti.com>